--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,8 +5,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -18,12 +18,122 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@keyframes pushInFromRight2 {
+  0% {
+    opacity: 0;
   }
-  body {
-    color: white;
-    background: black;
+  100% {
+    opacity: 1;
   }
+}
+
+@keyframes pushOutToRight2 {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes pushInFromRight {
+  0% {
+    right: -100%;
+  }
+  100% {
+    right: 0;
+  }
+}
+
+@keyframes pushOutToRight {
+  0% {
+    right: 0;
+  }
+  100% {
+    right: -100%;
+  }
+}
+.fade-in-animation2 {
+  animation: pushInFromRight2 0.6s ease;
+}
+
+.fade-out-animation2 {
+  animation: pushOutToRight2 0.4s ease;
+}
+.fade-in-animation {
+  animation: pushInFromRight 0.6s ease;
+  right: 0;
+}
+
+.fade-out-animation {
+  animation: pushOutToRight 0.4s ease;
+  right: -50%;
+  color: #ececec;
+}
+
+/* Element animations */
+@-webkit-keyframes hero-thumb-animation {
+  0% {
+    -webkit-transform: translateY(-20px);
+    transform: translateY(-20px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+  }
+}
+@keyframes hero-thumb-animation {
+  0% {
+    -webkit-transform: translateY(-20px);
+    transform: translateY(-20px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+  }
+}
+@-webkit-keyframes hero-thumb-sm-animation {
+  0% {
+    -webkit-transform: translateY(0) translateX(20px);
+    transform: translateY(0) translateX(20px);
+  }
+  100% {
+    -webkit-transform: translateY(0) translateX(0px);
+    transform: translateY(0) translateX(0px);
+  }
+}
+@keyframes hero-thumb-sm-animation {
+  0% {
+    -webkit-transform: translateY(0) translateX(20px);
+    transform: translateY(0) translateX(20px);
+  }
+  100% {
+    -webkit-transform: translateY(0) translateX(0px);
+    transform: translateY(0) translateX(0px);
+  }
+}
+@-webkit-keyframes hero-thumb-sm-2-animation {
+  0% {
+    -webkit-transform: translateY(20px);
+    transform: translateY(20px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+  }
+}
+@keyframes hero-thumb-sm-2-animation {
+  0% {
+    -webkit-transform: translateY(20px);
+    transform: translateY(20px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+  }
+}
+.child-text-black:hover > * {
+  color: #2c090b !important;
+}
+.container {
+  max-width: 1104px;
 }
